--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6713,6 +6713,78 @@
         "th":"",
         "id":"Surat Meragukan"
     },
+    "item.35000.name":{
+        "en":"Lv. 10 Chest",
+        "fr":"Coffre Nv. 10",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35001.name":{
+        "en":"Lv. 20 Chest",
+        "fr":"Coffre Nv. 20",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35002.name":{
+        "en":"Lv. 30 Chest",
+        "fr":"Coffre Nv. 30",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35003.name":{
+        "en":"Lv. 40 Chest",
+        "fr":"Coffre Nv. 40",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.40000.name":{
         "en":"Strawberry",
         "fr":"Fraise",
@@ -6821,7 +6893,7 @@
         "th":"",
         "id":""
     },
-    "item.41002.name":{
+    "item.41003.name":{
         "en":"Mini Teleport Crystal",
         "fr":"Petit cristal de téléportation",
         "es":"",
@@ -6833,6 +6905,222 @@
         "jp":"",
         "pt":"",
         "vi":"Thạch Dịch Chuyển Nhỏ",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41004.name":{
+        "en":"Talent Gem",
+        "fr":"Gemme de Talent",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41005.name":{
+        "en":"Wing Fortify Gem",
+        "fr":"Gemme de Fortification d'Ailes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41006.name":{
+        "en":"Mount EVO Gem",
+        "fr":"Gemme d'évolution de monture",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41007.name":{
+        "en":"Upgrade Gem [Lv. 1-30]",
+        "fr":"Gemme d'amélioration [Lv. 1-30]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41008.name":{
+        "en":"Upgrade Gem [Lv. 40]",
+        "fr":"Gemme d'amélioration [Lv. 40]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41009.name":{
+        "en":"Upgrade Gem [Lv. 50]",
+        "fr":"Gemme d'amélioration [Lv. 50]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41010.name":{
+        "en":"Upgrade Gem [Lv. 60]",
+        "fr":"Gemme d'amélioration [Lv. 60]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41011.name":{
+        "en":"Upgrade Gem [Lv. 70-100]",
+        "fr":"Gemme d'amélioration [Lv. 70-100]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41012.name":{
+        "en":"Upgrade Gem Fragment [Lv. 40]",
+        "fr":"Fragment de gemme d'amélioration [Lv. 40]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41013.name":{
+        "en":"Upgrade Gem Fragment [Lv. 50]",
+        "fr":"Fragment de gemme d'amélioration [Lv. 50]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41014.name":{
+        "en":"Upgrade Gem Fragment [Lv. 60]",
+        "fr":"Fragment de gemme d'amélioration [Lv. 60]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41015.name":{
+        "en":"Upgrade Gem Fragment [Lv. 70-100]",
+        "fr":"Fragment de gemme d'amélioration [Lv. 70-100]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
