--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5633,6 +5633,168 @@
         "th":"",
         "id":""
     },
+    "item.10500.name":{
+        "en":"[D]Carrion Metal Piece",
+        "fr":"[D]Pièce de métal nécrophage",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10501.name":{
+        "en":"[D]Sacred Metal Piece",
+        "fr":"[D]Pièce de métal sacré",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10502.name":{
+        "en":"[C]Sacred Metal Piece",
+        "fr":"[C]Pièce de métal sacré",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10503.name":{
+        "en":"[B]Sacred Metal Piece",
+        "fr":"[B]Pièce de métal sacré",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10504.name":{
+        "en":"[A]Sacred Metal Piece",
+        "fr":"[A]Pièce de métal sacré",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10505.name":{
+        "en":"[D]Undead Metal Piece",
+        "fr":"[D]Pièce de métal mort-vivant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10506.name":{
+        "en":"[C]Undead Metal Piece",
+        "fr":"[C]Pièce de métal mort-vivant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10507.name":{
+        "en":"[B]Undead Metal Piece",
+        "fr":"[B]Pièce de métal mort-vivant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10508.name":{
+        "en":"[A]Undead Metal Piece",
+        "fr":"[A]Pièce de métal mort-vivant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.11000.name":{
         "en":"Energy Essence (Minor)",
         "fr":"Essence d'Energie (Mineure)",
