--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3871,7 +3871,7 @@
     },
     "item.4015.name":{
         "en":"Ostrider",
-        "fr":Ostrider",
+        "fr":"Ostrider",
         "es":"",
         "ch":"",
         "kr":"",
