--- a/Translation/item.json
+++ b/Translation/item.json
@@ -415,7 +415,7 @@
     },
     "item.102.name":{
         "en":"Mithral Sword",
-        "fr":"Epée Mithril",
+        "fr":"Epée Mithral",
         "es":"Espada Mithral",
         "ch":"魔法長劍",
         "kr":"",
