--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5644,7 +5644,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D]Mảnh Mục Rữa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5662,7 +5662,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D]Mảnh Linh Thiêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5680,7 +5680,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[C]Mảnh Linh Thiêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5698,7 +5698,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[B]Mảnh Linh Thiêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5716,7 +5716,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[A]Mảnh Linh Thiêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5734,7 +5734,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D]Mảnh Vô Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5752,7 +5752,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[C]Mảnh Vô Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5770,7 +5770,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[B]Mảnh Vô Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5788,7 +5788,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[A]Mảnh Vô Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6886,7 +6886,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Cấp 10",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6904,7 +6904,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Cấp 20",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6922,7 +6922,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Cấp 30",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6940,7 +6940,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rương Cấp 40",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7084,7 +7084,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Thiên Phú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7102,7 +7102,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Khảm Cánh ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7120,7 +7120,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Tiến Hóa Thú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7138,7 +7138,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Cường Hóa [Cấp 1-30]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7156,7 +7156,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Cường Hóa [Cấp 40]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7174,7 +7174,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Cường Hóa [Cấp 50]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7192,7 +7192,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Cường Hóa [Cấp 60]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7210,7 +7210,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Cường Hóa [Cấp 70]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7228,7 +7228,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mảnh Ngọc Cường Hóa [Cấp 40]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7246,7 +7246,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mảnh Ngọc Cường Hóa [Cấp 50]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7264,7 +7264,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mảnh Ngọc Cường Hóa [Cấp 60]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7282,7 +7282,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mảnh Ngọc Cường Hóa [Cấp 70-100]",
         "ar":"",
         "it":"",
         "pl":"",
