--- a/Translation/item.json
+++ b/Translation/item.json
@@ -82,7 +82,7 @@
         "de":"Waffe",
         "jp":"",
         "pt":"",
-        "vi":"Vũ khí",
+        "vi":"Vũ Khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -118,7 +118,7 @@
         "de":"Halskette",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền",
+        "vi":"Dây Chuyền",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"Gürtel",
         "jp":"",
         "pt":"",
-        "vi":"Đai lưng",
+        "vi":"Đai Lưng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -172,7 +172,7 @@
         "de":"Umhang",
         "jp":"",
         "pt":"",
-        "vi":"Áo choàng",
+        "vi":"Áo Choàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -190,7 +190,7 @@
         "de":"Mount",
         "jp":"",
         "pt":"",
-        "vi":"Thú cưỡi",
+        "vi":"Thú Cưỡi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -208,7 +208,7 @@
         "de":"Geist",
         "jp":"",
         "pt":"",
-        "vi":"Tinh linh",
+        "vi":"Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"Geisterbuch",
         "jp":"",
         "pt":"",
-        "vi":"Sách tinh linh",
+        "vi":"Sách Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"Quest",
         "jp":"",
         "pt":"",
-        "vi":"Nhiệm vụ",
+        "vi":"Nhiệm Vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"Klingenprüfung",
         "jp":"",
         "pt":"",
-        "vi":"Lưỡi thử nghiệm",
+        "vi":"Lưỡi Thử Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -424,7 +424,7 @@
         "de":"Mithral-Schwert",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Mithral",
+        "vi":"Kiếm Lanh Xám",
         "ar":"",
         "it":"",
         "pl":"",
@@ -514,7 +514,7 @@
         "de":"Abadon gottlose Klinge",
         "jp":"",
         "pt":"",
-        "vi":"Tà Kiếm Abadon",
+        "vi":"Tà Kiếm Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -550,7 +550,7 @@
         "de":"Schwert der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Tái Sinh",
+        "vi":"Kiếm Hoàn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -604,7 +604,7 @@
         "de":"Präziser Bogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Chuẩn Xác",
+        "vi":"Cung Bách Trúng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -712,7 +712,7 @@
         "de":"Abadon Langbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Abadon",
+        "vi":"Cung Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -748,7 +748,7 @@
         "de":"Langbogen der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Cung Tái Sinh",
+        "vi":"Cung Hoàn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -856,7 +856,7 @@
         "de":"Zauberstab des Waldes",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Đại Rừng",
+        "vi":"Trượng Đại Ngàn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -910,7 +910,7 @@
         "de":"Abadon Zauberstab",
         "jp":"",
         "pt":"",
-        "vi":"Hắc Trượng Abadon",
+        "vi":"Hắc Trượng Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -946,7 +946,7 @@
         "de":"Zauberstab der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Tái Sinh",
+        "vi":"Trượng Hoàn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1036,7 +1036,7 @@
         "de":"Nachtschleicher",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Bóng đêm",
+        "vi":"Áo Giáp Bóng Đêm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1090,7 +1090,7 @@
         "de":"Heilige Rüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Halo",
+        "vi":"Áo Giáp Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1108,7 +1108,7 @@
         "de":"Abadon Rüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Abadon",
+        "vi":"Áo Giáp Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1144,7 +1144,7 @@
         "de":"Rüstung der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Tái Sinh",
+        "vi":"Áo Giáp Hoàn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1306,7 +1306,7 @@
         "de":"Abadon Helm",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Abadon",
+        "vi":"Mũ Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1342,7 +1342,7 @@
         "de":"Helm der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Tái Sinh",
+        "vi":"Mũ Hoàn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1378,7 +1378,7 @@
         "de":"Roher Ring",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Crude",
+        "vi":"Nhẫn Thô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1504,7 +1504,7 @@
         "de":"Abadon Ring",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Abadon",
+        "vi":"Nhẫn Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1540,7 +1540,7 @@
         "de":"Ring der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Tái Sinh",
+        "vi":"Nhẫn Hoàn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1702,7 +1702,7 @@
         "de":"Abadon Halskette",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền Abadon",
+        "vi":"Dây chuyền Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1738,7 +1738,7 @@
         "de":"Halskette der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền Tái Sinh",
+        "vi":"Dây chuyền Hoàn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1828,7 +1828,7 @@
         "de":"Patrouillen Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Giày Patrollel",
+        "vi":"Giày Tuần Tra",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1900,7 +1900,7 @@
         "de":"Abadon Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Giày Abadon",
+        "vi":"Giày Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2098,7 +2098,7 @@
         "de":"Abadon Gürtel",
         "jp":"",
         "pt":"",
-        "vi":"Đai Abadon",
+        "vi":"Đai Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2134,7 +2134,7 @@
         "de":"Gürtel der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Đai Tái Sinh",
+        "vi":"Đai Hoàn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2296,7 +2296,7 @@
         "de":"Abadon Cape",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Abadon",
+        "vi":"Áo Choàng Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2494,7 +2494,7 @@
         "de":"Abadon Hüllen",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay Abadon",
+        "vi":"Găng tay Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
