--- a/Translation/item.json
+++ b/Translation/item.json
@@ -435,7 +435,7 @@
         "en":"Harnes Sword",
         "fr":"Épée d'Harnes",
         "es":"Espada de Harnes",
-        "ch":"",
+        "ch":"哈尼斯之劍",
         "kr":"",
         "ru":"Меч Харнеса",
         "tr":"",
@@ -453,7 +453,7 @@
         "en":"Halo Sword",
         "fr":"Epée Halo",
         "es":"Espada luminosa",
-        "ch":"",
+        "ch":"光暈長劍",
         "kr":"",
         "ru":"Меч Хало",
         "tr":"",
@@ -471,7 +471,7 @@
         "en":"Abadon Wicked Blade",
         "fr":"Lame méchante d'Abadon",
         "es":"Cuchilla malvada de Abadón",
-        "ch":"",
+        "ch":"禁魔之刃",
         "kr":"",
         "ru":"Злой Клинок Абадона",
         "tr":"",
@@ -489,7 +489,7 @@
         "en":"Destined Sword",
         "fr":"Epée de la Destinée",
         "es":"Espada Destinada",
-        "ch":"",
+        "ch":"命運長劍",
         "kr":"",
         "ru":"Меч Судьбы",
         "tr":"",
@@ -507,7 +507,7 @@
         "en":"Rebirth Sword",
         "fr":"Epée de la Renaissance",
         "es":"Espada del Renacimiento",
-        "ch":"",
+        "ch":"重生之劍",
         "kr":"",
         "ru":"Меч Перерождения",
         "tr":"",
@@ -525,7 +525,7 @@
         "en":"Dabura Sword",
         "fr":"Epée de Dabura",
         "es":"Espada Dabura",
-        "ch":"",
+        "ch":"達魯巴之劍",
         "kr":"",
         "ru":"Меч Дабура",
         "tr":"",
@@ -543,7 +543,7 @@
         "en":"Simple Shortbow",
         "fr":"Simple Arc court",
         "es":"Simple Arco corto",
-        "ch":"",
+        "ch":"簡易短弓",
         "kr":"",
         "ru":"Простой Короткий Лук",
         "tr":"",
@@ -561,7 +561,7 @@
         "en":"Precise Bow",
         "fr":"Arc précis",
         "es":"Arco preciso",
-        "ch":"",
+        "ch":"精準木弓",
         "kr":"",
         "ru":"Точный лук",
         "tr":"",
@@ -579,7 +579,7 @@
         "en":"Ironarm Longbow",
         "fr":"Arc en fer",
         "es":"Arco de hierro",
-        "ch":"",
+        "ch":"鐵臂長弓",
         "kr":"",
         "ru":"Железный Длинный Лук",
         "tr":"",
@@ -597,7 +597,7 @@
         "en":"Raider's Longbow",
         "fr":"Arc long de Bandit",
         "es":"Arco largo de bandido",
-        "ch":"",
+        "ch":"掠奪者長弓",
         "kr":"",
         "ru":"Длинный Лук Налетчика",
         "tr":"",
