--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1954,7 +1954,7 @@
         "de":"Seelensammlung",
         "jp":"",
         "pt":"",
-        "vi":"Thu thập linh hồn",
+        "vi":"Kiếm Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1972,7 +1972,7 @@
         "de":"Seelensammlung aktivieren. Kann die Seelen der Ziele sehen, während Monster getötet werden. Plünderung von Seelen bietet Erfahrung. Auch das wiederholte Aufnehmen von Seelen derselben Farbe erhöht den Erfahrungsvorteil.",
         "jp":"",
         "pt":"",
-        "vi":"Kích hoạt Thu thập linh hồn bạn có thể nhìn thấy linh hồn của mục tiêu khi giết quái vật. Cướp linh hồn cung cấp EXP và nhặt linh hồn cùng màu liên tiếp sẽ tăng điểm EXP.",
+        "vi":"Kích hoạt Kiếm Hồn bạn có thể nhìn thấy linh hồn của mục tiêu khi giết quái vật. Cướp linh hồn cung cấp EXP và nhặt linh hồn cùng màu liên tiếp sẽ tăng điểm EXP.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2044,7 +2044,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hóa vàng",
+        "vi":"Chỉ Kim Thủ",
         "ar":"",
         "it":"",
         "pl":"",
