--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -10,7 +10,7 @@
         "de":"Feuerblitz",
         "jp":"",
         "pt":"",
-        "vi":"Cầu lửa",
+        "vi":"Hỏa Cầu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"Magischer Blitz",
         "jp":"",
         "pt":"",
-        "vi":"Cầu ma pháp",
+        "vi":"Đạn Ma Pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -118,7 +118,7 @@
         "de":"Energie",
         "jp":"",
         "pt":"",
-        "vi":"Năng lượng",
+        "vi":"Năng lượng Ma Pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -172,7 +172,7 @@
         "de":"Meteoriteneinschlag",
         "jp":"",
         "pt":"",
-        "vi":"Thiên thạch",
+        "vi":"Thuật Vẫn Thạch",
         "ar":"",
         "it":"",
         "pl":"",
@@ -226,7 +226,7 @@
         "de":"Erwachen",
         "jp":"",
         "pt":"",
-        "vi":"Thức tỉnh",
+        "vi":"Thức Tỉnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"Donner",
         "jp":"",
         "pt":"",
-        "vi":"Sấm sét",
+        "vi":"Lôi Điện",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"Feuerwand",
         "jp":"",
         "pt":"",
-        "vi":"Thảm lửa",
+        "vi":"Tường Lửa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"Einfrieren",
         "jp":"",
         "pt":"",
-        "vi":"Đóng băng",
+        "vi":"Đóng Băng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -442,7 +442,7 @@
         "de":"Magische Beherrschung",
         "jp":"",
         "pt":"",
-        "vi":"Thống trị ma pháp",
+        "vi":"Thống trị Ma pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -496,7 +496,7 @@
         "de":"Magisches Schild",
         "jp":"",
         "pt":"",
-        "vi":"Khiên ma thuật",
+        "vi":"Khiên Ma Pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -550,7 +550,7 @@
         "de":"Stille",
         "jp":"",
         "pt":"",
-        "vi":"Câm lặng",
+        "vi":"Trầm Lặng Chú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -604,7 +604,7 @@
         "de":"Frosthauch",
         "jp":"",
         "pt":"",
-        "vi":"Hơi thở băng giá",
+        "vi":"Tiếng Gầm Băng Giá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"Dreifachschuss",
         "jp":"",
         "pt":"",
-        "vi":"Tam liên kích tiễn",
+        "vi":"Tam Liên Kích Tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -712,7 +712,7 @@
         "de":"Giftpfeil",
         "jp":"",
         "pt":"",
-        "vi":"Tên độc",
+        "vi":"Độc Tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -766,7 +766,7 @@
         "de":"Adlerauge",
         "jp":"",
         "pt":"",
-        "vi":"Ưng nhãn",
+        "vi":"Ưng Nhãn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -820,7 +820,7 @@
         "de":"Geladener Schuss",
         "jp":"",
         "pt":"",
-        "vi":"Tên công phá",
+        "vi":"Phá Công Tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -928,7 +928,7 @@
         "de":"Multi-Pfeil",
         "jp":"",
         "pt":"",
-        "vi":"Loạn tiễn",
+        "vi":"Liên Hoàn Tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -982,7 +982,7 @@
         "de":"Meisterschütze",
         "jp":"",
         "pt":"",
-        "vi":"Người cung hợp nhất",
+        "vi":"Đột Phá Cung Tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1036,7 +1036,7 @@
         "de":"Ausweichen",
         "jp":"",
         "pt":"",
-        "vi":"Né",
+        "vi":"Nhận Thức Né Tránh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1090,7 +1090,7 @@
         "de":"Präzision",
         "jp":"",
         "pt":"",
-        "vi":"Chính xác",
+        "vi":"Nhịp Độ Chính xác",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1144,7 +1144,7 @@
         "de":"Lähmungsfalle",
         "jp":"",
         "pt":"",
-        "vi":"Bẫy tê liệt",
+        "vi":"Bẫy Tê Liệt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1198,7 +1198,7 @@
         "de":"Zielsuchpfeil",
         "jp":"",
         "pt":"",
-        "vi":"Truy kích",
+        "vi":"Truy kích Tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1252,7 +1252,7 @@
         "de":"Einschuss",
         "jp":"",
         "pt":"",
-        "vi":"Giật bắn",
+        "vi":"Phát Bắn Đột Phá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1360,7 +1360,7 @@
         "de":"Luftschnitt",
         "jp":"",
         "pt":"",
-        "vi":"Không trảm",
+        "vi":"Dực Không Trảm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1414,7 +1414,7 @@
         "de":"Zähigkeit",
         "jp":"",
         "pt":"",
-        "vi":"Bền bỉ",
+        "vi":"Thể Chất Chiến Đấu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1468,7 +1468,7 @@
         "de":"Aufschlag",
         "jp":"",
         "pt":"",
-        "vi":"Quét",
+        "vi":"Vũ Khí Ném",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1522,7 +1522,7 @@
         "de":"Einkerbung",
         "jp":"",
         "pt":"",
-        "vi":"Xung kích",
+        "vi":"Chấn Động Xung Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1576,7 +1576,7 @@
         "de":"Kriegsschrei",
         "jp":"",
         "pt":"",
-        "vi":"Gầm thét",
+        "vi":"Gào Thét Chiến Đấu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1630,7 +1630,7 @@
         "de":"Stoßwelle",
         "jp":"",
         "pt":"",
-        "vi":"Sóng xung kích",
+        "vi":"Kiếm Khí Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1684,7 +1684,7 @@
         "de":"Blocken",
         "jp":"",
         "pt":"",
-        "vi":"Đỡ đòn",
+        "vi":"Đỡ Đòn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1792,7 +1792,7 @@
         "de":"Kritischer Schnitt",
         "jp":"",
         "pt":"",
-        "vi":"Bạo kích nhẫn",
+        "vi":"Bạo Kích Nhẫn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1846,7 +1846,7 @@
         "de":"Wut",
         "jp":"",
         "pt":"",
-        "vi":"Thịnh nộ",
+        "vi":"Cuồng Bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1900,7 +1900,7 @@
         "de":"Tödlicher Schlag",
         "jp":"",
         "pt":"",
-        "vi":"Kết liễu",
+        "vi":"Kết Liễu",
         "ar":"",
         "it":"",
         "pl":"",
