--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2692,7 +2692,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Chiến Binh Nagar",
+        "vi":"[Linh Trứng] Chiến Binh Hải Yêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2710,7 +2710,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Phù Thủy Nagar",
+        "vi":"[Linh Trứng] Phù Thủy Hải Yêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3412,7 +3412,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Thủ Lĩnh Nagar",
+        "vi":"[Linh Trứng] Thủ Lĩnh Hải Yêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3736,7 +3736,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chiến Binh Nagar",
+        "vi":"Chiến Binh Hải Yêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3754,7 +3754,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Phù Thủy Nagar",
+        "vi":"Phù Thủy Hải Yêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4456,7 +4456,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thủ Lĩnh Nagar",
+        "vi":"Thủ Lĩnh Hải Yêu",
         "ar":"",
         "it":"",
         "pl":"",
