--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -136,7 +136,7 @@
         "de":"Erhöht die maximale MP des Magiers.",
         "jp":"",
         "pt":"",
-        "vi":"Tăng MP tối đa của pháp sư.",
+        "vi":"Tăng năng lượng tối đa của pháp sư.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"Erhöht die Basis-MP um {0}%",
         "jp":"",
         "pt":"",
-        "vi":"Tăng MP cơ bản lên {0}%",
+        "vi":"Tăng năng lượng cơ bản lên {0}%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -190,7 +190,7 @@
         "de":"Verursacht AOE durch Manipulation zerstörerischer Meteore",
         "jp":"",
         "pt":"",
-        "vi":"Gây ra sát thương AOE bằng cách điều khiển thiên thạch hủy diệt.",
+        "vi":"Gây ra sát thương LAN bằng cách điều khiển thiên thạch hủy diệt.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"Stellt schnell MP wieder her.",
         "jp":"",
         "pt":"",
-        "vi":"Phục hồi năng lượng.",
+        "vi":"Phục Hồi Năng Lượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"Greift das Ziel an und verhindert, dass es Fähigkeiten einsetzt.",
         "jp":"",
         "pt":"",
-        "vi":"Tấn công mục tiêu, khiến nó không thể sử dụng các kỹ năng.",
+        "vi":"Tấn công mục tiêu, khiến đối phương không thể sử dụng các kỹ năng.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"Schießt auf ein einzelnes Ziel, um großen Schaden zu verursachen.",
         "jp":"",
         "pt":"",
-        "vi":"Gây nhiều sát thương cho một mục tiêu.",
+        "vi":"Gây một lượng sát thương lớn cho một mục tiêu.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1000,7 +1000,7 @@
         "de":"Erhöht die Angriffsgeschwindigkeit des Schützen für einen kurzen Zeitraum, in der sich der Schütze nicht bewegen kann.",
         "jp":"",
         "pt":"",
-        "vi":"Tăng tốc độ tấn công của Cung thủ trong một khoảng thời gian ngắn, trong thời gian đó Cung thủ không thể di chuyển.",
+        "vi":"Tăng tốc độ tấn công của Cung thủ trong một khoảng thời gian ngắn, trong thời gian đó Cung Thủ không thể di chuyển.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1090,7 +1090,7 @@
         "de":"Präzision",
         "jp":"",
         "pt":"",
-        "vi":"Nhịp Độ Chính xác",
+        "vi":"Nhịp Độ Chính Xác",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1198,7 +1198,7 @@
         "de":"Zielsuchpfeil",
         "jp":"",
         "pt":"",
-        "vi":"Truy kích Tiễn",
+        "vi":"Truy Kích Tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1270,7 +1270,7 @@
         "de":"Schlägt das Ziel mit kraftvollen Schüssen zurück. Hat eine höhere Chance, das Ziel für 3 Sekunden entsprechend der Fähigkeitsstufe zu lähmen.",
         "jp":"",
         "pt":"",
-        "vi":"Đẩy lùi mục tiêu bằng những phát bắn mạnh mẽ. Có thể làm tê liệt mục tiêu trong 3 giây, khi cấp độ kỹ năng tăng, khả năng tê liệt tăng lên.",
+        "vi":"Đẩy lùi mục tiêu bằng những phát bắn mạnh mẽ. Có thể làm tê liệt mục tiêu trong 3 giây, khi cấp độ kỹ năng tăng, khả năng tê liệt tăng theo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1306,7 +1306,7 @@
         "de":"Zuschlagen",
         "jp":"",
         "pt":"",
-        "vi":"Trọng kích",
+        "vi":"Trọng Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1738,7 +1738,7 @@
         "de":"Kritische Steigerung",
         "jp":"",
         "pt":"",
-        "vi":"Tăng bạo kích",
+        "vi":"Tăng Bạo Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2062,7 +2062,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Một phép thuật màu nhiệm biến đổi quái vật thành năng lượng. Chỉ có thể sử dụng đối với quái vật có chỉ số không vượt quá người chơi. ",
+        "vi":"Một phép thuật màu nhiệm biến đổi quái vật thành năng lượng. Chỉ có thể sử dụng đối với quái vật có chỉ số không vượt quá người chơi.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2098,7 +2098,7 @@
         "de":"Prüfung der Ausdauer",
         "jp":"",
         "pt":"",
-        "vi":"Rèn luyện sức chịu đựng",
+        "vi":"Thách Thức Chịu Đựng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2134,7 +2134,7 @@
         "de":"Prüfung der Kraft",
         "jp":"",
         "pt":"",
-        "vi":"Rèn luyện sức mạnh",
+        "vi":"Thách Thức Sức Mạnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2152,7 +2152,7 @@
         "de":"Erhöht den Angriff.<br>Passiv. Erhöht {0} Angriff.",
         "jp":"",
         "pt":"",
-        "vi":"Tăng sức tấn công. <br> Bị động. Tăng {0} ATK",
+        "vi":"Tăng sức tấn công. <br> Bị động. Tăng {0} tấn công",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2170,7 +2170,7 @@
         "de":"Prüfung der Gesundheit",
         "jp":"",
         "pt":"",
-        "vi":"Rèn luyện thể chất",
+        "vi":"Thách Thức Sinh Lực",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2188,7 +2188,7 @@
         "de":"Erhöht die Gesundheit.<br>Passiv. Erhöht {0} Lebenspunkte.",
         "jp":"",
         "pt":"",
-        "vi":"Tăng sinh lực.<br>Bị động. Tăng {0} HP.",
+        "vi":"Tăng sinh lực.<br>Bị động. Tăng {0} máu.",
         "ar":"",
         "it":"",
         "pl":"",
