--- a/Translation/general.json
+++ b/Translation/general.json
@@ -586,7 +586,7 @@
         "de":"PVP",
         "jp":"",
         "pt":"",
-        "vi":"Chiến",
+        "vi":"Sát",
         "ar":"",
         "it":"",
         "pl":"",
