--- a/Translation/config.json
+++ b/Translation/config.json
@@ -10,7 +10,7 @@
         "de":"Ton",
         "jp":"",
         "pt":"",
-        "vi":"Âm thanh",
+        "vi":"Âm Thanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"Grafiken",
         "jp":"",
         "pt":"",
-        "vi":"Đồ họa",
+        "vi":"Đồ Họa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"Lautstärke des Ambientes",
         "jp":"",
         "pt":"",
-        "vi":"Âm thanh của môi trường",
+        "vi":"Âm Thanh Môi Truờng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"Lautstärke der Soundeffekte",
         "jp":"",
         "pt":"",
-        "vi":"Âm lượng hiệu ứng âm thanh",
+        "vi":"Âm lượng Hiệu Ứng ",
         "ar":"",
         "it":"",
         "pl":"",
