--- a/Translation/general.json
+++ b/Translation/general.json
@@ -244,7 +244,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Lớp",
+        "vi":"Nghề",
         "ar":"",
         "it":"",
         "pl":"",
