--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -28,7 +28,7 @@
         "de":"Erforderliche Klasse",
         "jp":"",
         "pt":"",
-        "vi":"Yêu Cầu Vai Trò",
+        "vi":"Yêu Cầu Nghề",
         "ar":"",
         "it":"",
         "pl":"",
