--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10,7 +10,7 @@
         "de":"Helm",
         "jp":"",
         "pt":"",
-        "vi":"Nón",
+        "vi":"Mũ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"Rüstung",
         "jp":"",
         "pt":"",
-        "vi":"Giáp",
+        "vi":"Y Phục",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Trang Phục",
+        "vi":"Thời Trang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -352,7 +352,7 @@
         "de":"Sonstiges",
         "jp":"",
         "pt":"",
-        "vi":"Hỗn Hợp",
+        "vi":"Tạp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"Klingenprüfung",
         "jp":"",
         "pt":"",
-        "vi":"Lưỡi Thử Nghiệm",
+        "vi":"Lưỡi Thách Thức",
         "ar":"",
         "it":"",
         "pl":"",
@@ -424,7 +424,7 @@
         "de":"Mithral-Schwert",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Lanh Xám",
+        "vi":"Bí Ngân Trường Kiếm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -550,7 +550,7 @@
         "de":"Schwert der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Hoàn Sinh",
+        "vi":"Kiếm Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"Dabura-Schwert",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Dabura",
+        "vi":"Kiếm Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -748,7 +748,7 @@
         "de":"Langbogen der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Cung Hoàn Sinh",
+        "vi":"Cung Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -766,7 +766,7 @@
         "de":"Dabura Bogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Dabura",
+        "vi":"Cung Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -946,7 +946,7 @@
         "de":"Zauberstab der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Hoàn Sinh",
+        "vi":"Trượng Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -964,7 +964,7 @@
         "de":"Dabura Stab",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Dabura",
+        "vi":"Trượng Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1144,7 +1144,7 @@
         "de":"Rüstung der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Hoàn Sinh",
+        "vi":"Áo Giáp Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1162,7 +1162,7 @@
         "de":"Dabura Rüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Dabura",
+        "vi":"Áo Giáp Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1306,7 +1306,7 @@
         "de":"Abadon Helm",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Âm Ty",
+        "vi":"Mũ Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1342,7 +1342,7 @@
         "de":"Helm der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Hoàn Sinh",
+        "vi":"Mũ Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1360,7 +1360,7 @@
         "de":"Dabura Helm",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Dabura",
+        "vi":"Mũ Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1450,7 +1450,7 @@
         "de":"Geerbtes Siegel",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Thừa Hưởng",
+        "vi":"Nhẫn Kế Thừa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1558,7 +1558,7 @@
         "de":"Dabura Ring",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Dabura",
+        "vi":"Nhẫn Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1756,7 +1756,7 @@
         "de":"Dabura Halskette",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền Dabura",
+        "vi":"Dây chuyền Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1954,7 +1954,7 @@
         "de":"Dabura Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Giày Dabura",
+        "vi":"Giày Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2152,7 +2152,7 @@
         "de":"Dabura Gürtel",
         "jp":"",
         "pt":"",
-        "vi":"Đai Dabura",
+        "vi":"Đai Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2350,7 +2350,7 @@
         "de":"Dabura Cape",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Dabura",
+        "vi":"Áo Choàng Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2548,7 +2548,7 @@
         "de":"Dabura Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay Dabura",
+        "vi":"Găng tay Quỷ Vương",
         "ar":"",
         "it":"",
         "pl":"",
